<?xml version="1.0"?>
<package>
  <name>iimoveit</name>
  <version>0.0.1</version>
  <description>A package providing a simple interface to accomplish tasks with an iiwa and moveIt!</description>

  <author email="marcus.freiherr_ebner_von_eschenbach@stud.tu-darmstadt.de">Marcus Ebner</author>
  <maintainer email="marcus.freiherr_ebner_von_eschenbach@stud.tu-darmstadt.de">Marcus Ebner</maintainer>
 
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>iiwa_description</build_depend>
  <build_depend>iiwa_moveit</build_depend>
  <build_depend>iiwa_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosmsg</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <run_depend>iiwa_description</run_depend>
  <run_depend>iiwa_moveit</run_depend>
  <run_depend>iiwa_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rosmsg</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>moveit_visual_tools</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>actionlib</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
  <!-- Other tools can request additional information be placed here -->

  </export>
</package>
